build: upgrade to JDK 25 with OpenRewrite